--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <div id="container"></div>
 <body>
-<audio controls autoplay>
-    <source src="Cant help falling in love - Haley Reinhart (sax cover Graziatto).mp3" type="audio/ogg">
-    <source src="Cant help falling in love - Haley Reinhart (sax cover Graziatto).mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-</audio>
+    <audio autoplay loop>
+        <source src="Cant help falling in love - Haley Reinhart (sax cover Graziatto).mp3" type="audio/ogg">
+        <source src="Cant help falling in love - Haley Reinhart (sax cover Graziatto).mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
     <div class="petals"></div>
     <div class="card">
         <div class="outside">
