--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <div id="container"></div>
 <body>
-    <audio autoplay loop>
+    <audio controls autoplay loop>
         <source src="Cant help falling in love - Haley Reinhart (sax cover Graziatto).mp3" type="audio/ogg">
         <source src="Cant help falling in love - Haley Reinhart (sax cover Graziatto).mp3" type="audio/mpeg">
         Your browser does not support the audio element.
